--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Configure
       run: |
         mkdir build
-        cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=${{env.EMSDK}}
+        cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=${{env.EMSDK}}/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake
     
     - name: Build
       run: |
