Add dependencies && generator option

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,13 @@ jobs:
       uses: mymindstorm/setup-emsdk@v11
       with:
         version: 1.38.40
+
+    - name: "Install Dependencies"
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y cmake
+        sudo apt-get install -y libx11-dev
+        cmake --version
     
     - name: Check dependencies
       run: |
@@ -38,7 +45,7 @@ jobs:
     - name: Configure
       run: |
         mkdir build
-        cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=${{env.EMSDK}}/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake
+        cmake -S . -B build -G "Unix Makefiles" -DCMAKE_TOOLCHAIN_FILE=${{env.EMSDK}}/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake
     
     - name: Build
       run: |
