Deploy action: update package find path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,7 @@ jobs:
       with:
         clean: false
     - name: "Upload release assets"
+      working-directory: ${{github.workspace}}
       shell: bash
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
