--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    
+    - name: Checkout Sowa
+      uses: actions/checkout@v3
       with:
         repository: sowaengine/sowa
         ref: develop
