--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,17 @@
 name: Deploy
 
-on: push
+on:
+  push:
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: false
 
 jobs:
   create-release:
@@ -19,6 +30,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: create-release
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -67,4 +80,22 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        hub release edit $(find sowa/package/ -maxdepth 1 -type f -printf "-a %p " -name "*.exe" -o -name "*.zip" -o -name "*.tar.gz") -m "" ${GITHUB_REF##*/}
+        hub release edit $(find sowa/package/ -maxdepth 1 -type f -printf "-a %p " -o -name "*.tar.gz") -m "" ${GITHUB_REF##*/}
+    
+    - name: "Upload artifact"
+      uses: actions/upload-pages-artifact@v1
+      with:
+        path: $(find sowa/package/ -maxdepth 1 -type f -printf "-a %p " -o -name "*.tar.gz")
+  
+  deploy:
+    environment:
+      name: "github-pages"
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: "Deploy to Github Pages"
+        id: deployment
+        uses: actions/deploy-pages@v2
+
+      
