--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,18 +74,24 @@ jobs:
       shell: bash
       working-directory: sowa/build
       run: cpack
+    
+    - name: "Generate artifact name"
+      id: artifact-name
+      run: |
+        echo 'path=$(find sowa/package/ -maxdepth 1 -type f -printf " %p " -o -name "*.tar.gz")' >> $GITHUB_OUTPUT
+        echo $GITHUB_OUTPUT
 
     - name: "Upload release assets"
       shell: bash
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        hub release edit $(find sowa/package/ -maxdepth 1 -type f -printf "-a %p " -o -name "*.tar.gz") -m "" ${GITHUB_REF##*/}
+        hub release edit -a ${{ steps.artifact-name.outputs.path }} -m "" ${GITHUB_REF##*/}
     
     - name: "Upload artifact"
       uses: actions/upload-pages-artifact@v1
       with:
-        path: $(find sowa/package/ -maxdepth 1 -type f -printf " %p " -o -name "*.tar.gz")
+        path: ${{ steps.artifact-name.outputs.path }}
   
   deploy:
     environment:
