--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,8 +78,8 @@ jobs:
     - name: "Generate artifact name"
       id: artifact-name
       run: |
-        echo 'path=$(find sowa/package/ -maxdepth 1 -type f -printf " %p " -o -name "*.tar.gz")' >> $GITHUB_OUTPUT
-        echo $GITHUB_OUTPUT
+        echo "path=$(find sowa/package/ -maxdepth 1 -type f -printf ' %p ' -o -name '*.tar.gz')" >> $GITHUB_OUTPUT
+        cat $GITHUB_OUTPUT
 
     - name: "Upload release assets"
       shell: bash
